@@ -1,3 +1,8 @@
+2009-12-23  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/callbacks.[c,h], src/gui-editor.[c,h], src/interface.c: Add basic
+	printing support to assembly listing window. Print settings are not saved.
+
 2009-12-20  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* src/gui-keypad.c: Process keypad button events only when the mode is
